<resources>
    <string name="app_name">SydlinaOnline</string>
    <string name="weclome">Welcome To Sydlina Online</string>
    <string name="create_pharmacy">Create Pharmacy</string>
    <string name="choose_pharmacy">Choose Pharmacy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="contact_info">Contact Info</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="medicine_info">Medicine Info</string>
    <string name="description">description</string>
    <string name="price">Price</string>
    <string name="quanitiy">Quanitiy</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="pharmacy_name">Pharmacy Name</string>
    <string name="email">Email</string>
    <string name="code">Code</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
</resources>
