<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".View.CreatePhamacyFragment">

    <TextView
        android:text="@string/create_pharmacy"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


   <android.support.design.widget.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="8dp"
       android:background="@drawable/rounded_rectangle"
       >
       <EditText
           android:id="@+id/ed_pharmacy_name"
           android:hint="@string/name"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           />
   </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/contact_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@drawable/rounded_rectangle"
        >
        <EditText
            android:id="@+id/ed_pharmacy_phone"
            android:hint="@string/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="8dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        >
        <EditText
            android:id="@+id/et_lat"
            android:hint="@string/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        >
        <EditText
            android:id="@+id/et_lan"
            android:hint="@string/longtitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_marginTop="8dp"
        android:id="@+id/btn_setLocation"
        android:layout_gravity="center"
        android:padding="16dp"
        android:text="set Location"
        android:background="@drawable/button_rounded_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@mipmap/ic_arrow_next"
        android:layout_margin="24dp"
        />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_done_phrmacy"
        android:src="@mipmap/ic_check"
        android:layout_margin="24dp"
       android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</RelativeLayout>

