<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >
            <TextView
                android:text="@string/email"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="example@gmail.com"
                android:id="@+id/tv_user_email"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Medicine"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="--------"
                android:id="@+id/tv_user_medicine_name"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/code"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="--------"
                android:id="@+id/tv_user_code"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/date"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="YYYY-MM-DD"
                android:id="@+id/tv_user_date"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/location"
                android:textSize="24sp"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="street !!!!!"
                android:id="@+id/tv_user_location"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="24sp"
                android:text="@string/quantity"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content" />
            <TextView
                android:hint="#"
                android:id="@+id/tv_user_quantity"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="delete"
                android:id="@+id/btn_user_delete"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_margin="8dp"

                android:background="@drawable/button_rounded_rectangle"
                android:layout_height="wrap_content" />
            <Button
                android:background="@drawable/button_rounded_rectangle"
                android:text="@string/done"
                android:id="@+id/btn_user_done"
                android:layout_width="0dp"
                android:layout_margin="8dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
